niri-lua/src/snapshots/niri_lua__extractors__tests__extract_animations_config.snap
---
source: niri-lua/src/extractors.rs
expression: "(animations.off, animations.slowdown,)"
---
(
    false,
    2.0,
)
