niri-lua/src/snapshots/niri_lua__extractors__tests__extract_color_invalid.snap
---
source: niri-lua/src/extractors.rs
expression: "(color1.is_none(), color2.is_none(), color3.is_none(),)"
---
(
    true,
    true,
    true,
)
