niri-lua/src/snapshots/niri_lua__extractors__tests__extract_color_valid.snap
---
source: niri-lua/src/extractors.rs
expression: "(color1.is_some(), color2.is_some(), color3.is_some(), color4.is_some(),)"
---
(
    true,
    true,
    true,
    true,
)
