niri-lua/src/snapshots/niri_lua__extractors__tests__extract_environment_var_names.snap
---
source: niri-lua/src/extractors.rs
expression: names
---
[
    "HOME",
    "PATH",
    "WAYLAND_DISPLAY",
]
