niri-lua/src/snapshots/niri_lua__extractors__tests__extract_focus_ring_config.snap
---
source: niri-lua/src/extractors.rs
expression: "(focus_ring.off, focus_ring.width,)"
---
(
    false,
    4.0,
)
