niri-lua/src/snapshots/niri_lua__extractors__tests__extract_touchpad_config.snap
---
source: niri-lua/src/extractors.rs
expression: "(touchpad.tap, touchpad.natural_scroll, touchpad.accel_speed.0,)"
---
(
    true,
    true,
    0.5,
)
