niri-lua/src/snapshots/niri_lua__extractors__tests__extract_xkb_complete.snap
---
source: niri-lua/src/extractors.rs
expression: "(xkb.layout.clone(), xkb.model.clone(), xkb.variant.clone(),\nxkb.options.clone(),)"
---
(
    "us,de",
    "pc104",
    "dvorak",
    Some(
        "grp:alt_shift_toggle",
    ),
)
