niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_enum_invalid_accel_profile.snap
---
source: niri-lua/src/extractors.rs
expression: "(invalid, typo, uppercase, empty,)"
---
(
    None,
    None,
    Some(
        Adaptive,
    ),
    None,
)
