niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_enum_invalid_click_method.snap
---
source: niri-lua/src/extractors.rs
expression: "(invalid, typo, wrong_case, empty,)"
---
(
    None,
    None,
    None,
    None,
)
