niri-lua/src/snapshots/niri_lua__extractors__tests__extractors_enum_invalid_tap_button_map.snap
---
source: niri-lua/src/extractors.rs
expression: "(invalid, typo, wrong_case, empty,)"
---
(
    None,
    None,
    Some(
        LeftRightMiddle,
    ),
    None,
)
